--- a/app.ai.css
+++ b/app.ai.css
@@ -8,6 +8,7 @@ https://api.github.com/repos/9xbryan/JSLib_backupScripts_CustomStyleScript/conte
 .cursor-grab .prose-sm,
 .cursor-grab *[node],
 .cursor-grab p[class|="text-neutral" i],
+.makeSelectable,
 p, span {
 	cursor: auto !important;
 	user-select: auto !important;
